# unicontrol-desktop

./: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: auto-release.yml
src/: aws-exports.ts  axios.ts  event.ts  main.tsx  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  file_manager.rs  main.rs  serial.rs  uploader.rs  utils.rs
src-tauri/src/model/: app_state.rs  backend.rs  board_info.rs  event.rs  mod.rs  progress.rs
src/components/: GroupChecker.tsx  PrivateRoutes.tsx  SideBar.tsx  UserIcon.tsx  VersionSelection.tsx  WindowControl.tsx  decoration.tsx
src/components/device/: DeleteDevice.tsx  DeviceFlash.tsx  DeviceList.tsx  DeviceSelect.tsx  DeviceStatus.tsx  DeviceTable.tsx  DeviceTabs.tsx  FlashButton.tsx  LogArea.tsx  PortInfo.tsx  device-column.tsx
src/components/firmware/: DeleteFirmware.tsx  DropZone.tsx  File.tsx  FirmwareList.tsx  FirmwareTable.tsx  FirmwareTabs.tsx  FirmwareUpload.tsx  UploadVersion.tsx  firmware-column.tsx
src/components/ui/: main-nav.tsx  passwordInput.tsx  scroll-area.tsx  sidebar-item.tsx  table.tsx
src/data/: backend.ts  tauri.ts
src/hooks/: useFileSelector.tsx
src/lib/: auth.ts
src/routes/: Device.tsx  Firmware.tsx  Root.tsx
src/routes/auth/: Login.tsx
src/types/: BoardInfo.ts  Device.ts  DeviceParam.ts  ErrorMessage.ts  Events.ts  FileType.ts  FileUpload.ts  Firmware.ts  FirmwareParams.ts  PaginatedResponse.ts  Pagination.ts  Progress.ts  RegisterDevice.ts  Url.ts  Version.ts
