[package]
name = "unicontrol-desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5",  features = [ "dialog-all", "fs-all", "shell-open", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
espflash = { version = "2.1.0" ,default-features = false   }
serialport = { version = "4.3.0", features = ["serde"] }
miette = "5.10.0"
ts-rs = { version = "7.1.1", features = ["chrono-impl", "format"] }
chrono = { version = "0.4.33", features = ["serde"] }
thiserror = "1.0.56"
md-5 = "0.10.6"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = "0.11.24"
tauri-plugin-upload = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1",  features = ["colored"] }
futures-util = "0.3.30"
log = "0.4.20"
tauri-plugin-fs-extra = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
read-progress-stream = "1.0.0"
tokio-util = { version = "0.7", features = [ "codec" ] }
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
